Bug 1507216: Make sure AudioConduit doesn't re-create the recv stream without de-registering the old one. r=dminor

Make a cleaner distinction between having a recv stream that is inactive, and no recv stream at all. Requires some modification to local RTC extension configuration, because of a test-case that assumed StopReceiving/StartReceiving would re-create the recv stream as opposed to simply restarting it.

Differential Revision: https://phabricator.services.mozilla.com/D12936